--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
 
 /* Global Styles */
 :root {
-	--primary-color: #dc3545;
-	/* --dark-color: #333333; */
-	--dark-color: #24292e;
-	--light-color: #f4f4f4;
+	--primary-color: orange;
+	--dark-color: #333333;
+	/* --dark-color: #24292e; */
+	/* --light-color: #f4f4f4; */
+	--light-color: lightgray;
 	--danger-color: #dc3545;
 	--success-color: #28a745;
 }
@@ -213,6 +214,9 @@ img {
 	transition: opacity 0.2s ease-in;
 	outline: none;
 	border-radius: 5px;
+}
+.btn:hover {
+	color: aliceblue;
 }
 
 .btn-link {
